--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,13 @@
                 />
               </picture>
 
-              <a class="url" href="https://page.line.me/296lnbtf">公式LINE</a>
+              <a
+                class="url"
+                href="https://page.line.me/296lnbtf"
+                target="_new"
+                rel="noopener noreferrer"
+                >公式LINE</a
+              >
             </div>
             <div class="flex">
               <picture>
@@ -151,7 +157,11 @@
                 />
               </picture>
 
-              <a class="url" href="https://twitter.com/sunamegu_megumi"
+              <a
+                class="url"
+                href="https://twitter.com/sunamegu_megumi"
+                target="_new"
+                rel="noopener noreferrer"
                 >Twitter</a
               >
             </div>
@@ -178,7 +188,11 @@
                 />
               </picture>
 
-              <a class="url" href="https://www.instagram.com/sunagemu_megumi/"
+              <a
+                class="url"
+                href="https://www.instagram.com/sunagemu_megumi/"
+                target="_new"
+                rel="noopener noreferrer"
                 >Instagram</a
               >
             </div>
@@ -206,6 +220,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="modernizr-custom.js"></script>
+    <script src="js/modernizr-custom.js"></script>
   </body>
 </html>
