--- a/record.html
+++ b/record.html
@@ -137,6 +137,8 @@
           </dd>
           <dt>2023/4/22</dt>
           <dd>第４回食料配布イベント</dd>
+          <dt>2023/6/24</dt>
+          <dd>第５回食料配布イベント</dd>
         </dl>
       </div>
     </main>
