--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
+  <head prefix="og: https://ogp.me/ns#">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,6 +15,16 @@
       crossorigin="anonymous"
     />
     <title>砂丘の恵みの納品依頼｜すなめぐとは</title>
+    <meta property="og:url" content="https://sunamegu.net/about.html" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="すなめぐとは" />
+    <meta
+      property="og:description"
+      content="砂丘の恵みの納品依頼、通称「すなめぐ」の活動紹介のページです。各部門で何をしているかを紹介しています。"
+    />
+    <meta property="og:image" content="https://sunamegu.net/images/icon.jpg" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@sunamegu_megumi" />
     <link rel="icon" href="images/icon.webp" />
     <link rel="stylesheet" href="css/html5reset-1.6.1.min.css" />
     <link rel="preload" href="css/html5reset-1.6.1.css.map" as="style" />
@@ -215,6 +225,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="modernizr-custom.js"></script>
+    <script src="js/modernizr-custom.js"></script>
   </body>
 </html>
