--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
+  <head prefix="og: https://ogp.me/ns#">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,6 +15,17 @@
       crossorigin="anonymous"
     />
     <title>砂丘の恵みの納品依頼｜お問い合わせ</title>
+    <meta property="og:url" content="https://sunamegu.net/contact.html" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="お問い合わせ" />
+    <meta
+      property="og:description"
+      content="砂丘の恵みの納品依頼、通称「すなめぐ」へのお問い合わせのページです。メールアドレス・各種SNSへのリンクやQRコードを掲載しています。"
+    />
+    <meta property="og:image" content="https://sunamegu.net/images/icon.jpg" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@sunamegu_megumi" />
+
     <link rel="icon" href="images/icon.webp" />
     <link rel="stylesheet" href="css/html5reset-1.6.1.min.css" />
     <link rel="preload" href="css/html5reset-1.6.1.min.css" as="style" />
