--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
+  <head prefix="og: https://ogp.me/ns#">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,6 +15,17 @@
       crossorigin="anonymous"
     />
     <title>砂丘の恵みの納品依頼</title>
+    <meta property="og:url" content="https://sunamegu.net/home.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="活動紹介" />
+    <meta
+      property="og:description"
+      content="砂丘の恵みの納品依頼、通称「すなめぐ」のホームページです。活動の紹介などをしています。協賛企業やニュースを掲載しています。"
+    />
+    <meta property="og:image" content="https://sunamegu.net/images/icon.jpg" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@sunamegu_megumi" />
+
     <script type="application/ld+json">
       "@context" : "http://schema.org",
       "@type" : "WebSite",
