--- a/record.html
+++ b/record.html
@@ -123,6 +123,27 @@
           <dd>「砂丘の恵みの納品依頼」設立</dd>
           <dt>2022/7/23</dt>
           <dd>第１回食料配布イベント</dd>
+          <dt>2022/9/28</dt>
+          <dd>
+            らっきょう産地援農ボランティア体験ツアー<br /><picture>
+              <source
+                srcset="images/らっきょう.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source
+                srcset="images/らっきょう.jpg"
+                media="(max-width:500px)"
+              />
+              <source srcset="images/らっきょう.webp" type="image/webp" />
+              <img
+                class="record"
+                src="images/らっきょう.jpg"
+                loading="lazy"
+                alt="らっきょうボランティア"
+              />
+            </picture>
+          </dd>
           <dt>2022/10/22</dt>
           <dd>第２回食料配布イベント</dd>
           <dt>2022/11/12</dt>
@@ -139,15 +160,77 @@
               <source srcset="images/award.jpg" media="(max-width:500px)" />
               <source srcset="images/award.webp" type="image/webp" />
               <img
-                class="award"
+                class="record"
                 src="images/award.jpg"
                 loading="lazy"
                 alt="表彰状"
               />
             </picture>
           </dd>
+          <dt>2023/3/10</dt>
+          <dd>
+            長芋収穫ボランティア<br /><picture>
+              <source
+                srcset="images/長芋.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source srcset="images/長芋.jpg" media="(max-width:500px)" />
+              <source srcset="images/長芋.webp" type="image/webp" />
+              <img
+                class="record"
+                src="images/長芋.jpg"
+                loading="lazy"
+                alt="長芋収穫ボランティア"
+              />
+            </picture>
+          </dd>
+          <dt>2023/3/27</dt>
+          <dd>
+            白ネギ無料配布イベント<br /><picture>
+              <source
+                srcset="images/白ネギ.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source srcset="images/白ネギ.jpg" media="(max-width:500px)" />
+              <source srcset="images/白ネギ.webp" type="image/webp" />
+              <img
+                class="record"
+                src="images/白ネギ.jpg"
+                loading="lazy"
+                alt="白ネギ無料配布"
+              />
+            </picture>
+          </dd>
           <dt>2023/4/22</dt>
           <dd>第４回食料配布イベント</dd>
+          <dt>2023/6/10,11</dt>
+          <dd>
+            トットリンカーネーション砂恵風紋祭<br /><picture>
+              <source
+                srcset="images/トットリンカーネーション.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source
+                srcset="images/トットリンカーネーション.jpg"
+                media="(max-width:500px)"
+              />
+              <source
+                srcset="images/トットリンカーネーション.webp"
+                type="image/webp"
+              />
+              <img
+                class="record"
+                src="images/トットリンカーネーション.jpg"
+                loading="lazy"
+                alt="トットリンカーネーション"
+              />
+            </picture>
+          </dd>
+          <dt>2023/6/23</dt>
+          <dd>砂丘の恵みの納品依頼企業説明会</dd>
           <dt>2023/6/24</dt>
           <dd>第５回食料配布イベント</dd>
         </dl>
