--- a/record.html
+++ b/record.html
@@ -229,6 +229,30 @@
               />
             </picture>
           </dd>
+          <dt>2023/6/10,11,17,18</dt>
+          <dd>
+            食らってよし！倉吉スイカ <br /><picture>
+              <source
+                srcset="images/食らってよし！倉吉スイカ.webp"
+                media="(max-width:500px)"
+                type="image/webp"
+              />
+              <source
+                srcset="images/食らってよし！倉吉スイカ.jpg"
+                media="(max-width:500px)"
+              />
+              <source
+                srcset="images/食らってよし！倉吉スイカ.webp"
+                type="image/webp"
+              />
+              <img
+                class="record"
+                src="images/食らってよし！倉吉スイカ.jpg"
+                loading="lazy"
+                alt="食らってよし！倉吉スイカ"
+              />
+            </picture>
+          </dd>
           <dt>2023/6/23</dt>
           <dd>砂丘の恵みの納品依頼企業説明会</dd>
           <dt>2023/6/24</dt>
