--- a/students.html
+++ b/students.html
@@ -113,23 +113,81 @@
     <main>
       <div class="wrapper">
         <div id="members">
-          <h1>メンバー募集</h1>
-          <div>
-            <p>
-              すなめぐのメンバーを募集中です。自分のやりたいことを将来に活かせる活動をぜひしてみませんか？
-            </p>
-            <p>すなめぐはいくつかの部門に分かれて活動しています。</p>
-            <p>
-              現在、食料配布部門、アルバイト・ボランティア関係部門、デザイン部門、農業部門に分かれて活動しています。
-            </p>
-            <p>
-              またその他ホームページを作成したり、SNSの更新、企業の打ち合わせなど幅広い活動をしています。
-            </p>
+          <h1>すなめぐの魅力 団員募集中!</h1>
+          <h2>自分のやりたいことができる！</h2>
+
+          <p>イベントを開催できたり、漫画家に会えたり、何でもできる！</p>
+          <p>自分のやりたいことを実現させよう！</p>
+
+          <h2>新しいことに挑戦できる！</h2>
+
+          <p>
+            企業にもメリットがあって協力してくれるから、一人じゃできないことができる！団員も助けてくれる！
+          </p>
+          <p>
+            みんなが頑張っているから、頑張れる！自分で考えて行動するから、達成感も大きい！
+          </p>
+          <h2>企業と関われる</h2>
+          <p>企業とコラボ企画ができる、自分のデザインを企業に見てもらえる！</p>
+          <p>商品開発もできる！会社のノウハウを知ることができる！</p>
+          <h2>とにかく楽しい！</h2>
+          <p>
+            先輩後輩関係なく仲がよく、意外とちゃんと遊んでいて会議のあとにはごはん！？
+          </p>
+          <p>食料配布のあとにはボーリングも！？</p>
+        </div>
+        <div class="container mt-4">
+          <div class="row gy-3">
+            <div class="col-lo-4 col-sm-6">
+              <picture>
+                <source
+                  srcset="images/トットリンカーネーション.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="images/トットリンカーネーション.jpg"
+                  media="(max-width:500px)"
+                />
+                <source
+                  srcset="images/トットリンカーネーション.webp"
+                  type="image/webp"
+                />
+                <img
+                  src="images/トットリンカーネーション.jpg"
+                  loading="lazy"
+                  alt="トットリンカーネーション"
+                />
+              </picture>
+            </div>
+            <div class="col-lo-4 col-sm-6">
+              <picture>
+                <source
+                  srcset="images/食らってよし！倉吉スイカ.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="images/食らってよし！倉吉スイカ.jpg"
+                  media="(max-width:500px)"
+                />
+                <source
+                  srcset="images/company/ja鳥取.webp"
+                  type="images/食らってよし！倉吉スイカ.webp"
+                />
+                <img
+                  src="images/食らってよし！倉吉スイカ.jpg"
+                  loading="lazy"
+                  alt="食らってよし！倉吉スイカ"
+                />
+              </picture>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="wrapper">
+        <h1 id="albite">アルバイト募集</h1>
         <ul id="page-link">
           <li><a href="#long">長期アルバイト</a></li>
           <li><a href="#short">短期アルバイト</a></li>
@@ -139,7 +197,6 @@
         </ul>
       </div>
       <div class="wrapper">
-        <h1 id="albite">アルバイト募集</h1>
         <h2>長期アルバイト</h2>
         <div class="container mt-4">
           <div id="long" class="row gy-3">
@@ -168,21 +225,21 @@
             </div>
           </div>
         </div>
-        <div class="top"><a href="#">Topへ</a></div>
+        <div class="top"><a href="#page-link">Topへ</a></div>
         <h2>短期アルバイト</h2>
         <div class="container mt-4">
           <div id="short" class="row gy-3">
             <script type="text/javascript" defer src="js/short.js"></script>
           </div>
         </div>
-        <div class="top"><a href="#">Topへ</a></div>
+        <div class="top"><a href="#page-link">Topへ</a></div>
         <h2>単発バイト</h2>
         <div class="container mt-4">
           <div id="single" class="row gy-3">
             <script type="text/javascript" defer src="js/single.js"></script>
           </div>
         </div>
-        <div class="top"><a href="#">Topへ</a></div>
+        <div class="top"><a href="#page-link">Topへ</a></div>
         <div class="wrapper">
           <h1>ボランティア募集</h1>
           <div class="container mt-4">
@@ -195,7 +252,7 @@
             </div>
           </div>
         </div>
-        <div class="top"><a href="#">Topへ</a></div>
+        <div class="top"><a href="#page-link">Topへ</a></div>
 
         <div class="wrapper">
           <h1>その他イベント</h1>
@@ -205,7 +262,7 @@
             </div>
           </div>
         </div>
-        <div class="top"><a href="#">Topへ</a></div>
+        <div class="top"><a href="#page-link">Topへ</a></div>
       </div>
     </main>
     <!-- main end -->
