--- a/students.html
+++ b/students.html
@@ -223,6 +223,25 @@
                 />
               </picture>
             </div>
+            <div class="col-lo-4 col-sm-6">
+              <picture>
+                <source
+                  srcset="images/long/m&m.webp"
+                  media="(max-width:500px)"
+                  type="image/webp"
+                />
+                <source
+                  srcset="images/long/m&m.jpg"
+                  media="(max-width:500px)"
+                />
+                <source srcset="images/long/m&m.webp" type="image/webp" />
+                <img
+                  src="images/long/m&m.jpg"
+                  loading="lazy"
+                  alt="アルバイト情報"
+                />
+              </picture>
+            </div>
           </div>
         </div>
         <div class="top"><a href="#page-link">Topへ</a></div>
